feat: change html structure

--- a/src/index.html
+++ b/src/index.html
@@ -368,16 +368,16 @@
       <fieldset>
         <legend>Role</legend>
         <div>
-          <input type="radio" name="role" />
-          <label>Admin</label>
+          <input id="role__admin" type="radio" name="role" />
+          <label for="role__admin">Admin</label>
         </div>
         <div>
-          <input type="radio" name="role" />
-          <label>Moderator</label>
+          <input id="role__moderator" type="radio" name="role" />
+          <label for="role__moderator">Moderator</label>
         </div>
         <div>
-          <input type="radio" name="role" />
-          <label>User</label>
+          <input id="role__user" type="radio" name="role" />
+          <label for="role__user">User</label>
         </div>
       </fieldset>
       <div>
