feat: add rounded corners

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
         // Page templates start
         var htmlPage = `
      <main>
-
+        <img src="https://github.com/michaelScopic/Wallpapers/blob/main/anime/Konachan.com_-_376008_sample.jpg?raw=true" alt="Konachan">
        <blockquote>Credits to <a href="https://gist.github.com/jaredpalmer/2f37ab6d57b6bc88719a9272a3799bee">jaredpalmer/all-html-elements.html</a>
        </blockquote>
        <p>This is a test page filled with common HTML elements to be a preview of <a href="https://github.com/FelipeIzolan/mi.css">mi.css</a> preset. </p>
