fix: fix not working assets

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
         // Page templates start
         var homePage = `
     <main>
-        <img src="../assets/shitlib.webp" alt="a meme about the difference between website designs' a few years ago and today">
+        <img src="./assets/shitlib.webp" alt="a meme about the difference between website designs' a few years ago and today">
         <blockquote>Inspired by this shitpost (I don't have the source) and made using <a href="https://github.com/FelipeIzolan/mi.css">mi.css</a></blockquote>
     </main>
     <article>
