--- a/src/index.html
+++ b/src/index.html
@@ -185,6 +185,10 @@
             </article>
         `
         var contactPage = `
+            <article>
+                <p>My github account: <a href="https://github.com/notwindstone/" target="_blank">github.com/notwindstone</a></p>
+                <p>My telegram account: <a href="https://t.me/windst1/" target="_blank">t.me/windst1</a></p>
+            </article>
         `
         // Page templates end
 
