perf: possibly fix too big CLS

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
         // Page templates start
         var homePage = `
             <main>
-                <img src="./assets/shitlib.webp" alt="a meme about the difference between website designs' a few years ago and today">
+                <img loading="lazy" style="aspect-ratio:1164/682;height:auto;max-width:100%" width="1164" height="682" src="./assets/shitlib.webp" alt="a meme about the difference between website designs' a few years ago and today">
                 <blockquote>Inspired by this shitpost (I don't have the source) and made using <a href="https://github.com/FelipeIzolan/mi.css">mi.css</a></blockquote>
             </main>
             <article>
@@ -130,6 +130,8 @@
                 <blockquote>
                     tech stack: next.js, typescript, tailwindcss, drizzle orm, tanstack query, oslojs, arctic, redis, postgresql, tanstack virtual
                 </blockquote>
+                <p>Website: <a href="https://zen-auth.vercel.app/" target="_blank">zen-auth.vercel.app</a></p>
+                <p>Source: <a href="https://github.com/notwindstone/zen-auth" target="_blank">github.com/notwindstone/zen-auth</a></p>
                 <img src="./assets/zen-auth-home.webp" alt="Zen Auth home screen">
             </article>
             <article>
@@ -140,7 +142,11 @@
                 <blockquote>
                     tech stack: next.js, typescript, tailwindcss, tanstack query, oslojs, zustand, next-intl, mantine hooks
                 </blockquote>
-                <img src="./assets/freesmlauncher-website-home.webp" alt="Freesmlauncher website home screen">
+                <p>Website: <a href="https://website-freesmlauncher.vercel.app/" target="_blank">website-freesmlauncher.vercel.app</a></p>
+                <p>Source: <a href="https://github.com/notwindstone/website-freesmlauncher" target="_blank">github.com/notwindstone/website-freesmlauncher</a></p>
+                <a href="https://website-freesmlauncher.vercel.app/" target="_blank">
+                    <img src="./assets/freesmlauncher-website-home.webp" alt="Freesmlauncher website home screen">
+                </a>
             </article>
             <article>
                 <h3>...between these two projects lay many other unfinished ones...</h3>
@@ -156,6 +162,7 @@
                 <blockquote>
                     note: this is my second programming project, which is currently the largest (due to my weak knowledge it has many flaws)
                 </blockquote>
+                <p>Source: <a href="" target="_blank"></a></p>
                 <img src="./assets/anisun-home.webp" alt="Anisun home screen">
             </article>
             <article>
@@ -169,6 +176,7 @@
                 <blockquote>
                     note: this is my first huge programming project
                 </blockquote>
+                <p>Source: <a href="" target="_blank"></a></p>
                 <img src="./assets/keyboard-wiki-home.webp" alt="Keyboard wiki home screen">
             </article>
             <hr>
@@ -181,6 +189,7 @@
                 <blockquote>
                     tech stack: qt, c++
                 </blockquote>
+                <p>Source: <a href="" target="_blank"></a></p>
                 <img src="./assets/freesmlauncher-home.webp" alt="Freesm Launcher home screen">
             </article>
         `
