perf: optimize main image

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
         // Page templates start
         var homePage = `
             <main>
-                <img loading="lazy" style="aspect-ratio:1164/682;height:auto;max-width:100%" width="1164" height="682" src="./assets/shitlib.webp" alt="a meme about the difference between website designs' a few years ago and today">
+                <img style="aspect-ratio:1164/682;height:auto;max-width:100%" width="1164" height="682" src="./assets/shitlib.webp" alt="a meme about the difference between website designs' a few years ago and today">
                 <blockquote>Inspired by this shitpost (I don't have the source) and made using <a href="https://github.com/FelipeIzolan/mi.css">mi.css</a></blockquote>
             </main>
             <article>
