feat: search engine optimization

--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,16 @@
                 <a href="#">notwindstone</a>
             </h1>
             <nav style="display:flex;gap:8px;font-size:0.8em;user-select:none">
-                <a style="text-decoration:underline;" onclick="routePush('?page=home')">
+                <a style="text-decoration:underline;" href="#" onclick="routePush('?page=home')">
                     Home
                 </a> -
-                <a style="text-decoration:underline" onclick="routePush('?page=projects')">
+                <a style="text-decoration:underline" href="#" onclick="routePush('?page=projects')">
                     Projects
                 </a> -
-                <a style="text-decoration:underline" onclick="routePush('?page=contact')">
+                <a style="text-decoration:underline" href="#" onclick="routePush('?page=contact')">
                     Contact
                 </a> -
-                <a style="text-decoration:underline" onclick="changeTheme()">
+                <a style="text-decoration:underline" href="#" onclick="changeTheme()">
                     ✨ Change Theme
                 </a>
             </nav>
