perf: improve website based on PageSpeed Insights

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="My portfolio website written in pure html and minified to just ~10 KBs of data">
         <link rel="stylesheet" href="./_minified.css">
-        <title>mi.css</title>
+        <title>Portfolio @ notwindstone</title>
     </head>
     <body>
         <header style="margin:0">
